librproxy = static_library('rproxy',
    sources: [
        'rproxy.c',
        'cfg.c',
        'downstream.c',
        'ssl.c',
        'lzlog.c',
        'lzq.c',
        'util.c',
        'gbrotlicompressor.c',
        'gbrotlidecompressor.c',
        'gpassthroughconverter.c',
        'ar-response-decoder-wrapper.c',
        'ar-request-encoder-wrapper.c',
        'rp-active-stream-decoder-filter.c',
        'rp-active-stream-encoder-filter.c',
        'rp-active-stream-filter-base.c',
        'rp-active-tcp-conn.c',
        'rp-cluster-factory.c',
        'rp-cluster-manager.c',
        'rp-codec.c',
        'rp-codec-client.c',
        'rp-codec-client-active-request.c',
        'rp-codec-client-prod.c',
        'rp-codec-helper.c',
        'rp-codec-read-filter.c',
        'rp-conn-manager-config.c',
        'rp-dfp-cluster-store.c',
        'rp-dfp-cluster-impl.c',
        'rp-dfp-cluster-factory.c',
        'rp-dispatcher.c',
        'rp-downstream-filter-manager.c',
        'rp-dynamic-forward-proxy.c',
        'rp-filter-chain-factory-callbacks-impl.c',
        'rp-filter-factory.c',
        'rp-filter-manager.c',
        'rp-filter-state.c',
        'rp-fixed-http-conn-pool-impl.c',
        'rp-fixed-read-buffer-source.c',
        'rp-fixed-write-buffer-source.c',
        'rp-headers.c',
        'rp-header-utility.c',
        'rp-host-description.c',
        'rp-http-conn-manager-config.c',
        'rp-http-conn-manager-impl.c',
        'rp-http-conn-mgr-impl-active-stream.c',
        'rp-http-conn-pool.c',
        'rp-http-conn-pool-base.c',
        'rp-http-conn-pool-base-active-client.c',
        'rp-http-filter.c',
        'rp-http-pending-stream.c',
        'rp-http-pool-data.c',
        'rp-http-utility.c',
        'rp-factory-context.c',
        'rp-input-stream.c',
        'rp-instance.c',
        'rp-io-handle.c',
        'rp-pass-through-filter.c',
        'rp-decompressor-filter.c',
        'rp-listen-socket.c',
        'rp-load-balancer.c',
        'rp-local-info.c',
        'rp-net-client-conn-factory.c',
        'rp-net-client-conn-impl.c',
        'rp-net-conn-impl.c',
        'rp-net-conn-impl-base.c',
        'rp-net-connection.c',
        'rp-net-filter.c',
        'rp-net-filter-impl.c',
        'rp-net-filter-mgr-impl.c',
        'rp-net-server-conn-impl.c',
        'rp-net-transport-socket.c',
        'rp-nfmi-active-read-filter.c',
        'rp-nfmi-active-write-filter.c',
        'rp-per-host-http-conn-pool.c',
        'rp-per-host-http-upstream.c',
        'rp-per-host-tcp-conn-pool.c',
        'rp-per-host-tcp-upstream.c',
        'rp-per-host-upstream.c',
        'rp-rds.c',
        'rp-request-rewrite.c',
        'rp-rewrite-urls-filter.c',
        'rp-resource-manager.c',
        'rp-response-decoder-wrapper.c',
        'rp-request-encoder-wrapper.c',
        'rp-route-config-provider.c',
        'rp-route-config-provider-manager.c',
        'rp-router.c',
        'rp-schedulable-cb.c',
        'rp-socket.c',
        'rp-state-filter.c',
        'rp-static-cluster-impl.c',
        'rp-static-cluster-factory.c',
        'rp-stream-info.c',
        'rp-stream-reset-handler.c',
        'rp-tcp-conn-pool.c',
        'rp-tcp-pool-data.c',
        'rp-thread-local-cluster.c',
        'rp-time.c',
        'rp-timer.c',
        'rp-transport-socket-config.c',
        'rp-upstream.c',
        'common/rp-basic-resource-impl.c',
        'common/rp-conn-pool.c',
        'common/rp-resource.c',
        'conn_pool/rp-conn-pool-base.c',
        'conn_pool/rp-conn-pool-base-active-client.c',
        'conn_pool/rp-pending-stream.c',
        'event/rp-dispatcher-impl.c',
        'event/rp-event-impl-base.c',
        'event/rp-libevent-scheduler.c',
        'event/rp-real-time-system.c',
        'event/rp-schedulable-cb-impl.c',
        'event/rp-timer-impl.c',
        'http1/rp-codec-impl.c',
        'http1/rp-http1-conn-pool.c',
        'http1/rp-http1-client-connection-impl.c',
        'http1/rp-http1-connection-impl.c',
        'http1/rp-legacy-http-parser-impl.c',
        'http1/rp-parser.c',
        'http1/rp-request-encoder-impl.c',
        'http1/rp-http1-request-encoder-wrapper.c',
        'http1/rp-response-encoder-impl.c',
        'http1/rp-http1-server-connection-impl.c',
        'http1/rp-stream-encoder-impl.c',
        'http1/rp-stream-wrapper.c',
        'local_info/rp-local-info-impl.c',
        'network/rp-accepted-socket-impl.c',
        'network/rp-client-socket-impl.c',
        'network/rp-conn-info-setter-impl.c',
        'network/rp-connection-socket-impl.c',
        'network/rp-default-client-conn-factory.c',
        'network/rp-io-bev-socket-handle-impl.c',
        'network/rp-raw-buffer-socket.c',
        'network/rp-socket-impl.c',
        'network/rp-transport-socket-factory-impl.c',
        'router/rp-codec-bridge.c',
        'router/rp-common-virtual-host-impl.c',
        'router/rp-default-upstream-http-filter-chain-factory.c',
        'router/rp-filter-config.c',
        'router/rp-route-common-config-impl.c',
        'router/rp-route-config-impl.c',
        'router/rp-route-impl.c',
        'router/rp-router-filter.c',
        'router/rp-router-filter-interface.c',
        'router/rp-static-route-config-provider-impl.c',
        'router/rp-upstream-codec-filter.c',
        'router/rp-upstream-filter-manager.c',
        'router/rp-upstream-request.c',
        'router/rp-upstream-request-fmc.c',
        'router/rp-virtual-host-impl.c',
        'server/rp-factory-context-impl.c',
        'server/rp-factory-context-impl-base.c',
        'server/rp-instance-base.c',
        'server/rp-instance-impl.c',
        'server/rp-server-impl.c',
        'stream_info/rp-filter-state-impl.c',
        'stream_info/rp-stream-info-impl.c',
        'stream_info/rp-upstream-info-impl.c',
        'tcp/rp-active-tcp-client.c',
        'tcp/rp-conn-pool.c',
        'tcp/rp-conn-read-filter.c',
        'tcp/rp-tcp-connection-data.c',
        'tcp/rp-tcp-pending-stream.c',
        'upstream/rp-cluster-impl-base.c',
        'upstream/rp-cluster-info-impl.c',
        'upstream/rp-cluster-factory-impl.c',
        'upstream/rp-cluster-factory-context-impl.c',
        'upstream/rp-cluster-manager-impl.c',
        'upstream/rp-host-description-impl.c',
        'upstream/rp-host-description-impl-base.c',
        'upstream/rp-host-impl.c',
        'upstream/rp-http-conn-pool.c',
        'upstream/rp-http-rewrite-upstream.c',
        'upstream/rp-http-upstream.c',
        'upstream/rp-load-balancer-context-base.c',
        'upstream/rp-managed-resource-impl.c',
        'upstream/rp-resource-manager-impl.c',
        'upstream/rp-tcp-conn-pool.c',
        'upstream/rp-tcp-upstream.c',
        'utils/delims.c',
        'utils/header_element.c',
        'utils/header_value_parser.c',
        'utils/name_value_pair.c',
        'utils/tokenizer.c'
    ],
    c_args: [
        '-D_GNU_SOURCE',
        '-DML_LOG_LEVEL=DEBUG_LEVEL',
        '-DALL_NOISY=1',
        '-O0',
        '-g3',
        '-I /usr/include'
    ],
    cpp_args: [
        '-DML_LOG_LEVEL=DEBUG_LEVEL',
        '-DALL_NOISY=1',
        '-O0',
        '-g3',
        '-flto'
    ],
    dependencies: [
        glib_dep,
        openssl_dep,
        libevent_dep,
        libevent_core_dep,
        libevent_pthreads_dep,
        libevent_extra_dep,
        libevent_openssl_dep,
        libevhtp_dep,
        confuse_dep,
        brotlicommon_dep,
        brotlidec_dep,
        brotlienc_dep
    ],
    install: true
)

install_headers(
    [
        'rproxy.h',
        'lzlog.h',
        'lzq.h',
        'gbrotlicompressor.h',
        'gbrotlidecompressor.h',
        'gpassthroughconverter.h',
        'ar-response-decoder-wrapper.h',
        'ar-request-encoder-wrapper.h',
        'rp-active-stream-decoder-filter.h',
        'rp-active-stream-encoder-filter.h',
        'rp-active-stream-filter-base.h',
        'rp-active-tcp-conn.h',
        'rp-cluster-configuration.h',
        'rp-cluster-factory.h',
        'rp-cluster-manager.h',
        'rp-codec.h',
        'rp-codec-client.h',
        'rp-codec-client-active-request.h',
        'rp-codec-client-prod.h',
        'rp-codec-helper.h',
        'rp-codec-read-filter.h',
        'rp-conn-manager-config.h',
        'rp-dfp-cluster-store.h',
        'rp-dfp-cluster-impl.h',
        'rp-dfp-cluster-factory.h',
        'rp-dispatcher.h',
        'rp-downstream-filter-manager.h',
        'rp-dynamic-forward-proxy.h',
        'rp-file-event.h',
        'rp-filter-chain-factory-callbacks-impl.h',
        'rp-filter-factory.h',
        'rp-filter-manager.h',
        'rp-filter-state.h',
        'rp-fixed-http-conn-pool-impl.h',
        'rp-fixed-read-buffer-source.h',
        'rp-fixed-write-buffer-source.h',
        'rp-headers.h',
        'rp-header-utility.h',
        'rp-host-description.h',
        'rp-http-conn-manager-config.h',
        'rp-http-conn-manager-impl.h',
        'rp-http-conn-mgr-impl-active-stream.h',
        'rp-http-conn-pool.h',
        'rp-http-conn-pool-base.h',
        'rp-http-conn-pool-base-active-client.h',
        'rp-http-filter.h',
        'rp-http-pending-stream.h',
        'rp-http-pool-data.h',
        'rp-http-utility.h',
        'rp-factory-context.h',
        'rp-input-stream.h',
        'rp-instance.h',
        'rp-io-handle.h',
        'rp-pass-through-filter.h',
        'rp-post-io-action.h',
        'rp-decompressor-filter.h',
        'rp-listen-socket.h',
        'rp-load-balancer.h',
        'rp-local-info.h',
        'rp-net-client-conn-factory.h',
        'rp-net-client-conn-impl.h',
        'rp-net-conn-impl.h',
        'rp-net-conn-impl-base.h',
        'rp-net-connection.h',
        'rp-net-filter.h',
        'rp-net-filter-impl.h',
        'rp-net-filter-mgr-impl.h',
        'rp-net-server-conn-impl.h',
        'rp-net-transport-socket.h',
        'rp-nfmi-active-read-filter.h',
        'rp-nfmi-active-write-filter.h',
        'rp-per-host-http-conn-pool.h',
        'rp-per-host-http-upstream.h',
        'rp-per-host-tcp-conn-pool.h',
        'rp-per-host-tcp-upstream.h',
        'rp-per-host-upstream.h',
        'rp-rds.h',
        'rp-request-rewrite.h',
        'rp-rewrite-urls-filter.h',
        'rp-resource-manager.h',
        'rp-response-decoder-wrapper.h',
        'rp-request-encoder-wrapper.h',
        'rp-route-config-provider.h',
        'rp-route-config-provider-manager.h',
        'rp-route-configuration.h',
        'rp-router.h',
        'rp-schedulable-cb.h',
        'rp-server-filter-config.h',
        'rp-socket.h',
        'rp-state-filter.h',
        'rp-static-cluster-impl.h',
        'rp-static-cluster-factory.h',
        'rp-stream-info.h',
        'rp-stream-reset-handler.h',
        'rp-tcp-conn-pool.h',
        'rp-tcp-pool-data.h',
        'rp-thread-local-cluster.h',
        'rp-time.h',
        'rp-timer.h',
        'rp-transport-socket-config.h',
        'rp-upstream.h'
    ],
    subdir: 'rproxy'
)

install_headers(
    [
        'common/rp-basic-resource-impl.h',
        'common/rp-conn-pool.h',
        'common/rp-resource.h',
    ],
    subdir: 'rproxy/common'
)

install_headers(
    [
        'conn_pool/rp-conn-pool-base.h',
        'conn_pool/rp-conn-pool-base-active-client.h',
        'conn_pool/rp-pending-stream.h',
    ],
    subdir: 'rproxy/conn_pool'
)

install_headers(
    [
        'event/rp-dispatcher-impl.h',
        'event/rp-event-impl-base.h',
        'event/rp-libevent-scheduler.h',
        'event/rp-real-time-system.h',
        'event/rp-schedulable-cb-impl.h',
        'event/rp-timer-impl.h',
    ],
    subdir: 'rproxy/event'
)

install_headers(
    [
        'http1/rp-codec-impl.h',
        'http1/rp-http1-conn-pool.h',
        'http1/rp-http1-client-connection-impl.h',
        'http1/rp-http1-connection-impl.h',
        'http1/rp-legacy-http-parser-impl.h',
        'http1/rp-parser.h',
        'http1/rp-request-encoder-impl.h',
        'http1/rp-http1-request-encoder-wrapper.h',
        'http1/rp-response-encoder-impl.h',
        'http1/rp-http1-server-connection-impl.h',
        'http1/rp-stream-encoder-impl.h',
        'http1/rp-stream-wrapper.h',
    ],
    subdir: 'rproxy/http1'
)

install_headers(
    [
        'local_info/rp-local-info-impl.h',
    ],
    subdir: 'rproxy/local_info'
)

install_headers(
    [
        'network/rp-accepted-socket-impl.h',
        'network/rp-client-socket-impl.h',
        'network/rp-conn-info-setter-impl.h',
        'network/rp-connection-socket-impl.h',
        'network/rp-default-client-conn-factory.h',
        'network/rp-io-bev-socket-handle-impl.h',
        'network/rp-raw-buffer-socket.h',
        'network/rp-socket-impl.h',
        'network/rp-transport-socket-factory-impl.h',
    ],
    subdir: 'rproxy/network'
)

install_headers(
    [
        'router/rp-codec-bridge.h',
        'router/rp-common-virtual-host-impl.h',
        'router/rp-default-upstream-http-filter-chain-factory.h',
        'router/rp-filter-config.h',
        'router/rp-route-common-config-impl.h',
        'router/rp-route-config-impl.h',
        'router/rp-route-impl.h',
        'router/rp-router-filter.h',
        'router/rp-router-filter-interface.h',
        'router/rp-static-route-config-provider-impl.h',
        'router/rp-upstream-codec-filter.h',
        'router/rp-upstream-filter-manager.h',
        'router/rp-upstream-request.h',
        'router/rp-upstream-request-fmc.h',
        'router/rp-virtual-host-impl.h',
    ],
    subdir: 'rproxy/router'
)

install_headers(
    [
        'server/rp-factory-context-impl.h',
        'server/rp-factory-context-impl-base.h',
        'server/rp-instance-base.h',
        'server/rp-instance-impl.h',
        'server/rp-server-impl.h',
    ],
    subdir: 'rproxy/server'
)

install_headers(
    [
        'stream_info/rp-filter-state-impl.h',
        'stream_info/rp-stream-info-impl.h',
        'stream_info/rp-upstream-info-impl.h',
    ],
    subdir: 'rproxy/stream_info'
)

install_headers(
    [
        'tcp/rp-active-tcp-client.h',
        'tcp/rp-conn-pool.h',
        'tcp/rp-conn-read-filter.h',
        'tcp/rp-tcp-connection-data.h',
        'tcp/rp-tcp-pending-stream.h',
    ],
    subdir: 'rproxy/tcp'
)

install_headers(
    [
        'upstream/rp-cluster-impl-base.h',
        'upstream/rp-cluster-info-impl.h',
        'upstream/rp-cluster-factory-impl.h',
        'upstream/rp-cluster-factory-context-impl.h',
        'upstream/rp-cluster-manager-impl.h',
        'upstream/rp-host-description-impl.h',
        'upstream/rp-host-description-impl-base.h',
        'upstream/rp-host-impl.h',
        'upstream/rp-http-conn-pool.h',
        'upstream/rp-http-rewrite-upstream.h',
        'upstream/rp-http-upstream.h',
        'upstream/rp-load-balancer-context-base.h',
        'upstream/rp-managed-resource-impl.h',
        'upstream/rp-resource-manager-impl.h',
        'upstream/rp-tcp-conn-pool.h',
        'upstream/rp-tcp-upstream.h',
    ],
    subdir: 'rproxy/upstream'
)

install_headers(
    [
        'utils/delims.h',
        'utils/header_element.h',
        'utils/header_value_parser.h',
        'utils/name_value_pair.h',
        'utils/tokenizer.h'
    ],
    subdir: 'rproxy/utils'
)

# Generate .pc file
pkgconfig = import('pkgconfig')
pkgconfig.generate(
  name: 'rproxy',
  description: 'High-performance reverse proxy library',
  version: meson.project_version(),
  libraries: librproxy,      # The library target we built
  subdirs: 'rproxy',         # For: -I${includedir}/rproxy/
)
#  requires: ['libevent'],    # Required dependencies
#  requires_private: ['threads']  # Private deps (not propagated)
